--- a/templates/CRM/add-transaction.html
+++ b/templates/CRM/add-transaction.html
@@ -13,7 +13,7 @@
                         <div class="col-12 grid-margin stretch-card">
                             <div class="card">
                                 <div class="card-body">
-                                    <h4 class="card-title">Transaction</h4>
+                                    <h4 class="card-title"><span class="mdi mdi-transfer"></span> Transaction</h4>
                                     <p class="card-description font-weight-bold display-4">
                                         <i class="far fa-money-bill-alt"></i> Transfert d'argent
                                     </p>
