--- a/templates/CRM/clients.html
+++ b/templates/CRM/clients.html
@@ -39,7 +39,7 @@
                             </div>
 
                             <div class="table-responsive">
-                                <table class="table table-striped">
+                                <table class="table table-striped table-hover">
                                     <thead>
                                     <tr align="center">
                                         <th>
@@ -99,10 +99,10 @@
                         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                             {% if clients.has_previous %}
                                 <div class="btn-group" role="group" aria-label="First group">
-                                    <a href="{% url 'crm:clients' %}?page=1">
+                                    <a href="{% url 'crm:clients' %}?page=1{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><<</button>
                                     </a>
-                                    <a href="{% url 'crm:clients' %}?page={{ clients.previous_page_number }}">
+                                    <a href="{% url 'crm:clients' %}?page={{ clients.previous_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><</button>
                                     </a>
                                 </div>
@@ -112,7 +112,7 @@
                                     {% if clients.number == page_num %}
                                         <button type="button" class="btn btn-primary active">{{ page_num }}</button>
                                     {% else %}
-                                        <a href="{% url 'crm:clients' %}?page={{ page_num }}">
+                                        <a href="{% url 'crm:clients' %}?page={{ page_num }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                             <button type="button" class="btn btn-light">{{ page_num }}</button>
                                         </a>
                                     {% endif %}
@@ -120,10 +120,10 @@
                             </div>
                             {% if clients.has_next %}
                                 <div class="btn-group" role="group" aria-label="Third group">
-                                    <a href="{% url 'crm:clients' %}?page={{ clients.next_page_number }}">
+                                    <a href="{% url 'crm:clients' %}?page={{ clients.next_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">></button>
                                     </a>
-                                    <a href="{% url 'crm:clients' %}?page={{ clients.paginator.num_pages }}">
+                                    <a href="{% url 'crm:clients' %}?page={{ clients.paginator.num_pages }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">>></button>
                                     </a>
                                 </div>
