--- a/templates/CRM/clients-accounts.html
+++ b/templates/CRM/clients-accounts.html
@@ -128,10 +128,10 @@
                         <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
                             {% if accounts.has_previous %}
                                 <div class="btn-group" role="group" aria-label="First group">
-                                    <a href="{% url 'crm:clients_accounts' %}?page=1">
+                                    <a href="{% url 'crm:clients_accounts' %}?page=1{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><<</button>
                                     </a>
-                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.previous_page_number }}">
+                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.previous_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><</button>
                                     </a>
                                 </div>
@@ -141,7 +141,7 @@
                                     {% if accounts.number == page_num %}
                                         <button type="button" class="btn btn-primary active">{{ page_num }}</button>
                                     {% else %}
-                                        <a href="{% url 'crm:clients_accounts' %}?page={{ page_num }}">
+                                        <a href="{% url 'crm:clients_accounts' %}?page={{ page_num }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                             <button type="button" class="btn btn-light">{{ page_num }}</button>
                                         </a>
                                     {% endif %}
@@ -149,10 +149,10 @@
                             </div>
                             {% if accounts.has_next %}
                                 <div class="btn-group" role="group" aria-label="Third group">
-                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.next_page_number }}">
+                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.next_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">></button>
                                     </a>
-                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.paginator.num_pages }}">
+                                    <a href="{% url 'crm:clients_accounts' %}?page={{ accounts.paginator.num_pages }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">>></button>
                                     </a>
                                 </div>
