--- a/templates/CRM/edit-account.html
+++ b/templates/CRM/edit-account.html
@@ -108,12 +108,8 @@
     <script>
         $(document).ready(function () {
             $(function () {
-                $("#opening_date_timepicker").datepicker({
-                    format: 'yyyy-mm-dd',
-                });
-                $("#expiration_date_timepicker").datepicker({
-                    format: 'yyyy-mm-dd',
-                });
+                $("#opening_date_timepicker").datepicker();
+                $("#expiration_date_timepicker").datepicker();
             });
         });
     </script>
