--- a/templates/CRM/parts/navbar.html
+++ b/templates/CRM/parts/navbar.html
@@ -47,9 +47,11 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="{% url 'crm:accounts' %}" class="dropdown-item mt-2">
-                            <i class="fas fa-users-cog"></i>&nbsp;&nbsp;Gerer Mes Comptes
-                        </a>
+                        {% if client is not None %}
+				<a href="{% url 'crm:accounts' %}" class="dropdown-item mt-2">
+                            		<i class="fas fa-users-cog"></i>&nbsp;&nbsp;Gerer Mes Comptes
+                        	</a>
+			{% endif %}
                         <a href="{% url 'crm:password_reset' %}" class="dropdown-item">
                             <i class="fas fa-unlock"></i>&nbsp;&nbsp;Changer Mot De Passe
                         </a>
