--- a/templates/CRM/deposits.html
+++ b/templates/CRM/deposits.html
@@ -102,11 +102,7 @@
                                     <a href="{% url 'crm:deposits' %}?page=1{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><<</button>
                                     </a>
-                                    <a href="{% url 'crm:deposits' %}?page=
-
-
-
-                                            {{ deposits.previous_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
+                                    <a href="{% url 'crm:deposits' %}?page={{ deposits.previous_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light"><</button>
                                     </a>
                                 </div>
@@ -116,11 +112,7 @@
                                     {% if deposits.number == page_num %}
                                         <button type="button" class="btn btn-primary active">{{ page_num }}</button>
                                     {% else %}
-                                        <a href="{% url 'crm:deposits' %}?page=
-
-
-
-                                                {{ page_num }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
+                                        <a href="{% url 'crm:deposits' %}?page={{ page_num }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                             <button type="button" class="btn btn-light">{{ page_num }}</button>
                                         </a>
                                     {% endif %}
@@ -128,18 +120,10 @@
                             </div>
                             {% if deposits.has_next %}
                                 <div class="btn-group" role="group" aria-label="Third group">
-                                    <a href="{% url 'crm:deposits' %}?page=
-
-
-
-                                            {{ deposits.next_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
+                                    <a href="{% url 'crm:deposits' %}?page={{ deposits.next_page_number }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">></button>
                                     </a>
-                                    <a href="{% url 'crm:deposits' %}?page=
-
-
-
-                                            {{ deposits.paginator.num_pages }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
+                                    <a href="{% url 'crm:deposits' %}?page={{ deposits.paginator.num_pages }}{% if 'search' in request.GET %}&search={{ request.GET.search }}{% endif %}">
                                         <button type="button" class="btn btn-light">>></button>
                                     </a>
                                 </div>
